packages/styles/src/components/datepicker.scss
@forward './../variables/options';

@use './../variables/color';
@use './../variables/type';
@use './../variables/components/datepicker';
@use './../variables/components/forms';
@use './../variables/commons';
@use './../mixins/icons' as icons-mx;

ngb-datepicker {
  // Conversion for compatibility
  --bs-light: var(--post-light);
}

ngb-datepicker.dropdown-menu {
  box-shadow: 0 0 8px 0 color.$gray-80;
}

ngb-datepicker-navigation {
  justify-content: space-between;
}

ngb-datepicker-navigation-select.ngb-dp-navigation-select {
  flex: 0 1 auto;

  select {
    padding-right: 1rem;
    border: 0;
    background-position: right;

    &:focus {
      border-radius: commons.$border-radius;
      background-color: transparent;
      box-shadow: inset 0 0 0 commons.$border-thick color.$black;
    }

    + select {
      margin-left: 0.5rem;
    }
  }
}

ngb-datepicker .ngb-dp-arrow {
  flex-grow: 0;
  height: auto;

  span {
    flex-shrink: 0;
  }
}

.ngb-dp-header {
  font-size: 1.25rem;
  font-weight: 700;

  .ngb-dp-month-name {
    padding-top: 0.3rem;
    color: color.$black !important;
    font: inherit;
  }
}

.ngb-dp-navigation-select {
  .form-select {
    background-color: transparent;
    font: inherit;
  }
}

span.ngb-dp-navigation-chevron {
  border-width: 0.09em 0.09em 0 0;
}

.ngb-dp-weekday {
  color: rgba(var(--post-contrast-color-rgb), 0.6) !important;
  font-size: 1rem;
  font-style: normal !important;
  line-height: type.$line-height-copy !important;
  width: 40px !important;
  height: auto !important;
  font-weight: normal;
}

.ngb-dp-weekdays {
  border-bottom: 0 !important;
}

.ngb-dp-day {
  width: auto !important;
  height: auto !important;

  &.hidden {
    flex-grow: 1;
  }
}

.ngb-dp-day > .btn-light {
  width: 40px !important;
  height: 40px !important;
  line-height: 40px;
}

.ngb-dp-day > .text-white {
  color: color.$black !important;
}

.ngb-dp-day > .btn-light,
.ngb-dp-day > .btn-light:hover {
  background: none;
}

.ngb-dp-day > .btn-light:hover {
  background-color: color.$gray-background-light;
}

.ngb-dp-day > .btn-light:not(:disabled):not(.disabled):active,
.ngb-dp-day > .btn-light:not(:disabled):not(.disabled).active {
  background-color: transparent;
}

.ngb-dp-day > .btn-light.bg-primary.text-white {
  background-color: color.$yellow !important;
}

.ngb-dp-open {
  position: absolute;
  z-index: 5;
  top: forms.$input-border-width;
  right: forms.$input-border-width;
  bottom: forms.$input-border-width;
  height: forms.$input-height-inner;
  width: forms.$input-height-inner;
  background: transparent;

  .pi-3203,
  .pi-calendar {
    @include icons-mx.pi(3203);
    width: datepicker.$ngb-dp-icon-size;
    height: datepicker.$ngb-dp-icon-size;
    transform: none;
  }
}

.form-control-sm ~ .ngb-dp-open {
  height: forms.$input-height-inner-sm;
  width: forms.$input-height-inner-sm;

  .pi-3203,
  .pi-calendar {
    width: datepicker.$ngb-dp-icon-size-sm;
    height: datepicker.$ngb-dp-icon-size-sm;
  }
}

.form-control-rg ~ .ngb-dp-open {
  height: forms.$input-height-inner-rg;
  width: forms.$input-height-inner-rg;
}

.form-floating > .ngb-dp-open,
.form-control-lg ~ .ngb-dp-open {
  height: forms.$input-height-inner-lg;
  width: forms.$input-height-inner-lg;

  .pi-3203,
  .pi-calendar {
    width: datepicker.$ngb-dp-icon-size-lg;
    height: datepicker.$ngb-dp-icon-size-lg;
  }
}

input[ngbDatepicker] {
  // Hide the x on IE/Edge input fields
  &::-ms-clear {
    display: none;
  }

  ~ .ngb-dp-open {
    border: 0;
  }

  .form-floating > & ~ label:first-of-type,
  &.form-control-lg ~ label:first-of-type {
    left: 0 !important;
  }

  + ngb-datepicker {
    .ngb-dp-header {
      padding: 1rem;
    }

    .ngb-dp-weekdays {
      margin-bottom: 1rem;
      padding: 0 1rem 1rem;
    }

    .ngb-dp-week {
      padding-right: 1rem !important;
      padding-left: 1rem !important;

      &:last-child {
        padding-bottom: 1rem;
      }
    }
  }
}

.form-control[ngbDatepicker] {
  &.is-invalid,
  &.is-valid,
  &.show-ng-validation.ng-touched.ng-invalid,
  &.show-ng-validation.ng-touched.ng-valid {
    padding-right: 1rem;
    background-position: calc(100% - #{forms.$input-height-inner}) center;
  }

  .form-floating > &,
  &.form-control-lg {
    &.is-invalid,
    &.is-valid,
    &.show-ng-validation.ng-touched.ng-invalid,
    &.show-ng-validation.ng-touched.ng-valid {
      background-position: calc(100% - #{forms.$input-height-inner-lg}) center !important;
    }
  }

  &.form-control-rg {
    &.is-invalid,
    &.is-valid,
    &.show-ng-validation.ng-touched.ng-invalid,
    &.show-ng-validation.ng-touched.ng-valid {
      background-position: calc(100% - #{forms.$input-height-inner-rg}) center;
    }
  }

  &.form-control-sm {
    &.is-invalid,
    &.is-valid,
    &.show-ng-validation.ng-touched.ng-invalid,
    &.show-ng-validation.ng-touched.ng-valid {
      background-position: calc(100% - #{forms.$input-height-inner-sm}) center;
    }
  }
}

